tests/method/missing_keyword.rev
struct Foo {
    bar() {}
}

print Foo().bar() // error: missing 'fn' keyword before method definition